Time: 1 ms (47.87%), Space: 42.5 MB (93.39%) - LeetHub